fix color scheme of canvas elements, use ResizeObserver, fix unnecessary scrollbar on src selectors

--- a/src/renderer/src/splitpanes.css
+++ b/src/renderer/src/splitpanes.css
@@ -12,11 +12,11 @@
 .splitpanes--vertical > .splitpanes__splitter:before {
   left: -2px;
   right: -2px;
-  height: 100%;
+  @apply h-full hover:cursor-e-resize;
 }
 
 .splitpanes--horizontal > .splitpanes__splitter:before {
   top: -2px;
   bottom: -2px;
-  width: 100%;
+  @apply w-full hover:cursor-n-resize;
 }
